dev/non_executable_reasons_record/1850.txt
3.7
Python 3.7.3
An error occurred while executing the following cell:
------------------
import warnings
warnings.filterwarnings('ignore')
from __future__ import division
import matplotlib.pyplot as plt
plt.style.use('classic')
import matplotlib.dates as dts
import numpy as np
import runProcs
from scipy.stats import gaussian_kde
import pandas as pd
%matplotlib inline

# This program requires the Penn World Tables data file: pwt90.xlsx
# available at https://pwt.sas.upenn.edu/
------------------

[0;36m  File [0;32m"<ipython-input-1-f6945eb0f426>"[0;36m, line [0;32m6[0m
[0;31m    import matplotlib.dates as dts[0m
[0m           ^[0m
[0;31mSyntaxError[0m[0;31m:[0m from __future__ imports must occur at the beginning of the file

SyntaxError: from __future__ imports must occur at the beginning of the file (<ipython-input-1-f6945eb0f426>, line 6)

Executability                            : False
